AMBARI-265 (clemlab): first step on initial working deployment